<resources>
    <string name="app_name">Calculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history_menu_txt">History</string>
    <string name="setting_menu_txt">Setting</string>
    <string name="calculator_action_title">Calculator</string>
    <string name="feedback_txt">Feedback</string>
    <string name="check_for_updates_txt">Check for updates</string>
    <string name="privacy_txt">Privacy</string>
    <string name="rate_our_app_txt">Rate our app</string>
    <string name="about_calculator_txt">About Calculator</string>
    <string name="how_do_you_feel_about_calculator_txt">How do you feel about Calculator ?</string>
    <string name="confirm_txt">Confirm</string>
    <string name="cancel_txt">Cancel</string>
    <string name="button_txt">Button</string>
</resources>