<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.menu.SettingFragment">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/convergence"
        android:text="@string/setting_menu_txt"
        android:textSize="25sp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed-light"
        android:textAllCaps="false"
        android:text="About Calculator"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback_txt"
            android:textAllCaps="false"
            android:textAlignment="viewStart"
            android:layout_marginStart="5dp"
            android:drawableEnd="@drawable/ic_arrow"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_for_updates_txt"
            android:textAllCaps="false"
            android:textAlignment="viewStart"
            android:layout_marginStart="5dp"
            android:drawableEnd="@drawable/ic_arrow"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_txt"
            android:textAllCaps="false"
            android:textAlignment="viewStart"
            android:layout_marginStart="5dp"
            android:drawableEnd="@drawable/ic_arrow"/>

    </LinearLayout>
</LinearLayout>