<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/black"
            android:text="@string/rate_our_app_txt"
            android:textSize="20sp"/>

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:numStars="5"
            android:stepSize="1"
            android:outlineAmbientShadowColor="@color/orange_A700"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/black"
            android:text="@string/how_do_you_feel_about_calculator_txt" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:maxLines="1"
                android:background="@drawable/button_style"
                app:backgroundTint="#E1E0DE"
                android:fontFamily="@font/roboto"
                android:text="@string/cancel_txt"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConfirm"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:maxLines="1"
                android:background="@drawable/button_style"
                app:backgroundTint="#FFAB40"
                android:fontFamily="@font/roboto"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:text="@string/confirm_txt"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>